# rogue-scholar-bert

./: Caddyfile  Dockerfile  README.md  docker-compose.yml  hypercorn.toml  inference.py  pyproject.toml
.github/workflows/: release.yml
api/: __init__.py  inference.py
